# Thought-Aware-FreeKV

./: .gitignore  LICENSE  README.md  old_README.md  requirements.txt
accuracy/: README.md
accuracy/razor_patterns/ds-r1-llama-8b/: number-14-1.tsv
accuracy/razor_patterns/ds-r1-qwen-14b/: manual.tsv  number-14-1.tsv  number-40-10.tsv  pred-0-14-1.tsv  pred-0-25-5.tsv  pred-0-40-10.tsv  pred-1-14-1.tsv  pred-1-25-5.tsv  pred-1-40-10.tsv  pred-10-14-1.tsv  pred-10-25-5.tsv  pred-10-40-10.tsv  pred-12-14-1.tsv  pred-12-25-5.tsv  pred-12-40-10.tsv  pred-13-14-1.tsv  pred-13-25-5.tsv  pred-13-40-10.tsv  pred-14-14-1.tsv  pred-14-25-5.tsv  pred-14-40-10.tsv  pred-15-25-5.tsv  pred-15-40-10.tsv  pred-18-14-1.tsv  pred-18-25-5.tsv  pred-18-40-10.tsv  pred-2-14-1.tsv  pred-2-25-5.tsv  pred-2-40-10.tsv  pred-27-14-1.tsv  pred-27-25-5.tsv  pred-27-40-10.tsv  pred-28-14-1.tsv  (+17 more)
analysis/: README.md
analysis/baseline/: report.md
analysis/dips_v2/: report.md
analysis/full_aime/: dips_report.md  drift_vs_turnover.md  report.md
analysis/math50/: dips_report.md  drift_vs_turnover.md  report.md  timing.md
analysis/profile_aime/: drift_vs_turnover.md  report.md  timing.md
analysis/verify_dips/: dips_context.md  report.md
analysis/verify_dips_v2/: report.md
config/: model2path.json
eval/datasets/: gov_report.jsonl  longgenbench.json
scripts/: ajk_reproduce.sh  analyze_baseline.py  analyze_dips.py  analyze_drift_vs_turnover.py  analyze_fetch_interval.py  analyze_per_head.py  analyze_recall_overlap.py  analyze_timing.py  backfill_thought_labels.py  fetch_logs.sh  grade_preds.py  modal_app.py  patch_deps.py  render_preds.py  run_modal_aime_fetch1.sh  run_modal_aime_fetch4.sh  run_modal_baseline.sh  run_modal_dips_v2.sh  run_modal_full_aime.sh  run_modal_math50.sh  run_modal_math50_fetch1.sh  run_modal_math50_fetch2.sh  run_modal_math50_fetch4.sh  run_modal_math50_fetch8.sh  run_modal_math50_per_problem.sh  run_modal_math50_test_crash.sh  run_modal_profile.sh  run_modal_smoke.sh  run_modal_verify_dips.sh  run_modal_verify_dips_v2.sh  show_dips.py  slurm_math50_fetch1.sh  slurm_math50_fetch2.sh  slurm_math50_fetch8.sh
slurm/: install.sh
slurm/phase0/: run_aime24_freekv.sh  run_aime24_full_kv.sh
source/: pred.py  setup.py
source/freekv/: infer_state.py  logger.py  thought_classifier.py  utils.py
source/freekv_cpp/: CMakeLists.txt
(+43 files in other folders)
